eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Focus_on_the_Basics__c.object
<CustomObject>
    <fields>
        <fullName>ARB_s_Strategic_Objectives_TEST__c</fullName>
        <inlineHelpText>ARB&apos;s strategic Objectives are communicated to provide effective direction to staff on risk assessment and control issues.</inlineHelpText>
        <label>ARB&apos;s Strategic Objectives TEST</label>
        <picklist>
            <picklistValues>
                <fullName>No - staff are unaware of the strategic objectives of ARB.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff possibly have an idea of the strategic objectives, but are unsure what they are or how they might be delivered.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - but there may not be a consistent approach to achieving those objectives.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - all staff are aware of the strategic objectives and have an idea of how risks may impact these.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - all staff are aware of the strategic objectives and departmental objectives tie in with these.  Staff are fully aware what risks might impact the achievement of the strategic objectives.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biggest_risk_within_your_area__c</fullName>
        <inlineHelpText>What do you consider is the biggest risk within your area?</inlineHelpText>
        <label>Biggest risk within your area</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Board_s_and_Executive_Management__c</fullName>
        <inlineHelpText>I understand the Board’s and Executive managements approach towards risk within Al Rayan Bank</inlineHelpText>
        <label>Board&apos;s and Executive Management</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_In_Key_Changes__c</fullName>
        <inlineHelpText>You receive communication in key changes and decisions that impact your area of responsibility?</inlineHelpText>
        <label>Communication In Key Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competency_and_training_in_management__c</fullName>
        <inlineHelpText>My own competency and training in the management of risk is recognised by my line manager</inlineHelpText>
        <label>Competency and training in management</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consequences_of_not_completing__c</fullName>
        <inlineHelpText>I understand the consequences of not completing the controls</inlineHelpText>
        <label>Consequences of not completing</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consider_the_biggest_risk_impacting__c</fullName>
        <inlineHelpText>What do you consider the biggest risk impacting the Bank at the moment?</inlineHelpText>
        <label>Consider the biggest risk impacting</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Controls_I_operate_are_reviewed__c</fullName>
        <inlineHelpText>I have completed my Personal Basic Statement and it has been reviewed by my supervisor</inlineHelpText>
        <label>Completed Personal Basic statement</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controls_operated_within_my_department__c</fullName>
        <inlineHelpText>The way controls are operated within my department has been explained to me</inlineHelpText>
        <label>Controls operated within my department</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controls_that_are_operated_to_mitigate__c</fullName>
        <inlineHelpText>I understand the controls that are operated to mitigate those risks and the reason I do them</inlineHelpText>
        <label>Controls that are operated to mitigate</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Change Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharia Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_commenced__c</fullName>
        <label>Employment commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Heard_about_Risk_Management__c</fullName>
        <inlineHelpText>I have heard about risk management and the way this is dealt within Al Rayan Bank</inlineHelpText>
        <label>Heard about Risk Management</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identified_key_people_in_supporting_me__c</fullName>
        <inlineHelpText>Al Rayan Bank has identified key people in supporting me in the management of risk within my area</inlineHelpText>
        <label>Identified key people in supporting me</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_a_risk_is_not_properly_identified__c</fullName>
        <inlineHelpText>I know what to do if a risk is not properly identified or not being properly controlled</inlineHelpText>
        <label>If a risk is not properly identified</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Importance_of_risk_management__c</fullName>
        <inlineHelpText>I appreciate the importance of risk management within Al Rayan Bank</inlineHelpText>
        <label>Importance of risk management</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Included_in_my_objectives_and_PDP__c</fullName>
        <inlineHelpText>The management of risk and their control is included in my objectives and PD</inlineHelpText>
        <label>Risk Included in my objectives and PDP</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limitations_that_impede_you__c</fullName>
        <inlineHelpText>What do you think are the limitations that impede you from implementing the controls in your area?</inlineHelpText>
        <label>Limitations that impede you</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager_is_receptive_to_suggestions__c</fullName>
        <inlineHelpText>My manager is receptive to suggestions for improvements regarding risks and controls</inlineHelpText>
        <label>Manager is receptive to suggestions</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managers_and_Execs_promote_Risk_Culture__c</fullName>
        <inlineHelpText>Senior Management and Executives lead by example and promote a risk aware culture?</inlineHelpText>
        <label>Managers and Execs promote Risk Culture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Problem_whilst_completing_a_control__c</fullName>
        <inlineHelpText>If I identify a problem whilst completing a control I understand what action to take</inlineHelpText>
        <label>Problem whilst completing a control</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recognised_training_method__c</fullName>
        <inlineHelpText>Al Rayan Bank uses a recognised training method in providing me with suitable training to allow me to complete my role effectively</inlineHelpText>
        <label>Recognised training method</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_and_communicate_ris__c</fullName>
        <inlineHelpText>You feel able to report and communicate risks and issues openly and honestly?</inlineHelpText>
        <label>Report, Communicate Risks issues openly</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risks_that_may_impact_the_area_I_work_in__c</fullName>
        <inlineHelpText>I understand the risks that may impact the area I work in</inlineHelpText>
        <label>Risks that may impact the area I work in</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turn_to_if_I_have_a_risk_or_issue__c</fullName>
        <inlineHelpText>I know who to turn to if I have a risk or issue that needs resolving</inlineHelpText>
        <label>Turn to if I have a risk or issue</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Understand_policies_and_procedures__c</fullName>
        <inlineHelpText>I understand the policies and procedures relevant to me working at the bank</inlineHelpText>
        <label>Understand policies and procedures</label>
        <picklist>
            <picklistValues>
                <fullName>1: Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4: Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Focus on the Basics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Department_Name__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <role>ProjectStaff184311</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FOB-{00}</displayFormat>
        <label>Focus on the Basics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Focus on the Basics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>